After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751641 - vtdec: fix refcount error in error handling
vtdec: fix refcount error in error handling
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other Mac OS
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 751241
 
 
Reported: 2015-06-29 09:48 UTC by Ilya Konstantinov
Modified: 2015-08-16 13:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vtdec: fix refcount error in error handling (711 bytes, patch)
2015-06-29 09:50 UTC, Ilya Konstantinov
committed Details | Review

Description Ilya Konstantinov 2015-06-29 09:48:50 UTC
See code below:

    CFRelease (bbuf);
    if (status != noErr)
      goto sample_error;

    ...
  sample_error:
    GST_ELEMENT_ERROR (vtdec, RESOURCE, FAILED, (NULL),
        ("CMSampleBufferCreate returned %d", (int) status));

    if (bbuf)
      CFRelease (bbuf); // <-- already released
Comment 1 Ilya Konstantinov 2015-06-29 09:50:06 UTC
Created attachment 306270 [details] [review]
vtdec: fix refcount error in error handling
Comment 2 Sebastian Dröge (slomo) 2015-07-07 17:19:32 UTC
commit cc3d79f7cc595cb66d9c932d64b1f08334a80e84
Author: Ilya Konstantinov <ilya.konstantinov@gmail.com>
Date:   Mon Jun 29 12:40:55 2015 +0300

    vtdec: fix refcount error in error handling
    
    https://bugzilla.gnome.org/show_bug.cgi?id=751641