vtdec: fix refcount error in error handling

https://bugzilla.gnome.org/show_bug.cgi?id=751641